--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
 
-
     <!-- celem zadania jest stworzenie uproszczonego kalkulatora, 
         który to będzie potrafił wykonywać podstawowe operacje arytmetyczne 
         na dwóch podanych liczbach  -->
@@ -35,8 +34,11 @@
             <label for="b">Liczba 2:</label>
             <input type="number" id="b">
         </div>
+
         <!-- div#nazwa[enter] lub div.nazwa[enter]-->
         <!-- trik na tabelki table>tr*5>td*3 -->
+        <!-- lorem ipsum skrót -->
+        <!-- podobnie tabelki do list -->
     </div>
     <div id="result">
 
